@@ -62,10 +62,9 @@ $GLOBALS['TL_LANG']['ERR']['cartMinSubtotal']				= 'The minimum order amount is 
 /**
  * Miscellaneous
  */
-$GLOBALS['TL_LANG']['MSC']['labelLanguage']			= 'Language';
 $GLOBALS['TL_LANG']['MSC']['editLanguage']			= 'Edit';
 $GLOBALS['TL_LANG']['MSC']['deleteLanguage']		= 'Delete';
-$GLOBALS['TL_LANG']['MSC']['defaultLanguage']		= 'Fallback';
+$GLOBALS['TL_LANG']['MSC']['defaultLanguage']		= 'Fallback language';
 $GLOBALS['TL_LANG']['MSC']['editingLanguage']		= 'ATTENTION: You are editing language-specific data!';
 $GLOBALS['TL_LANG']['MSC']['deleteLanguageConfirm']	= 'Are you sure you want to delete this language? There is no undo!';
 $GLOBALS['TL_LANG']['MSC']['undefinedLanguage']		= 'undefined';
